[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["mohammedalsamki <momosamak21@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyterlab = "^3.2.4"
numpy = "^1.21.4"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
sklearn = "^0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
